# wmux

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  entries.ndjson  eslint.config.mjs  index.html  package-lock.json  package.json  roadmap.md  vite.config.js
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
browser-helper/: Cargo.toml  build.rs
browser-helper/src/shared/: mod.rs  simple_app.rs
browser-helper/src/shared/simple_handler/: mod.rs
collab-proto/: Cargo.toml
collab-proto/src/: lib.rs
collab-server/: Cargo.toml  Dockerfile
collab-server/src/: main.rs
docs/: cmux-comparison.md  competitive-landscape.md  demo-script.md  mcp-workbook-app.md  multiplayer-design.md  tmux-shim-compat.md
docs/adr/: 0001-multiplayer-via-tailscale.md
public/: browser-pane.html
src/: activity_log_runtime.mjs  agent_sidebar_runtime.mjs  agent_state.mjs  automation_bridge.mjs  browser_pane_runtime.mjs  cef_embedded.mjs  collab_runtime.mjs  connection_targets.mjs  html_artifacts.mjs  keybindings_runtime.mjs  keyboard_runtime.mjs  layout_runtime.mjs  layout_state.mjs  main.js  new_tab_popover_runtime.mjs  pane_aux_runtime.mjs  pane_context_runtime.mjs  pane_init.mjs  pane_registry.mjs  panel_dock.mjs  pr_review_runtime.mjs  remote_tmux_inspector_runtime.mjs  remote_tmux_runtime.mjs  remote_tmux_ui_runtime.mjs  session_vault_runtime.mjs  style.css  surfaces_runtime.mjs  tab_surface_runtime.mjs  terminal_restore.mjs  ui_panels_runtime.mjs  workbook_runtime.mjs  workspace_state.mjs  worktree_state.mjs
src-tauri/: Cargo.toml  bundle.release.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser_helpers.rs  browser_windows.rs  code_mode.rs  collab_server.rs  commands.rs  conpty.rs  control_bridge.rs  http_server.rs  ipc_server.rs  lib.rs  main.rs  osc_parser.rs  remote_tmux.rs  session_manager.rs  session_vault.rs  shell-integration.fish  shell-integration.ps1  shell-integration.sh  shell-integration.zsh  tunnel_manager.rs  url_detector.rs  workbook.rs
src-tauri/src/browser_windows/: commands.rs  mod.rs  model.rs
src-tauri/src/commands/: app.rs  git.rs  io.rs  mod.rs  sessions.rs
src-tauri/src/remote_tmux/: commands.rs  mod.rs  model.rs  parser.rs  scripts.rs  service.rs
src-tauri/src/session_vault/: commands.rs  mod.rs  model.rs  store.rs
src-tauri/tests/fixtures/: claude-code-bootstrap.tmux  codex-bootstrap.tmux  mixed-agent-bootstrap.tmux
test/: agent_state.test.mjs  connection_targets.test.mjs  layout_state.test.mjs  pane_init.test.mjs  syntax.test.mjs  terminal_restore.test.mjs  worktree_state.test.mjs
viewer-pwa/: index.html  manifest.webmanifest  sw.js  viewer.css  viewer.mjs  workspace.html  workspace.mjs
