[package]
name = "collab-server"
version = "0.1.0"
edition = "2021"
description = "Rendezvous + signaling server for wmux collab."
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "collab-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
collab-proto = { path = "../collab-proto" }

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
