[package]
name = "wmux"
version = "0.0.6"
edition = "2021"

[lib]
name = "wmux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wmux"
path = "src/main.rs"

[[bin]]
name = "tmux"
path = "src/bin/tmux.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-build = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
opener = "0.7"
url = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Pipes",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

