[package]
name = "wmux"
version = "0.1.0"
edition = "2021"
default-run = "wmux"

[lib]
name = "wmux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wmux"
path = "src/main.rs"

[[bin]]
name = "tmux"
path = "src/bin/tmux.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-build = { version = "2", optional = true }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
opener = "0.7"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
# CDP (Chrome DevTools Protocol) WebSocket client used by browser_read_content
# to evaluate JS in the out-of-process CEF helper window. See http_server.rs.
tokio-tungstenite = "0.24"
futures-util = "0.3"
# base64 for the MCP `browser_screenshot` tool — CDP returns PNG screenshots
# base64-encoded; we decode before writing to disk.
base64 = "0.22"
# Embedded JS engine for the `wmux_eval` MCP tool (Code Mode spike). Pure
# Rust, no native libs to bundle. Slower than v8 but adequate for short
# orchestration scripts; revisit deno_core later if we outgrow it.
boa_engine = "0.20"
# axum drives the in-app collab HTTP/WS server (see collab_server.rs and
# docs/multiplayer-design.md). Kept separate from the hand-rolled
# http_server.rs that serves the agent API.
axum = { version = "0.7", features = ["ws"] }
collab-proto = { path = "../collab-proto" }
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Pipes",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
] }
webview2-com = "0.38"
clipboard-win = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

